--- a/index.html
+++ b/index.html
@@ -2,9 +2,70 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Web3 Affiliate System DApp</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no"
+    />
+    <title>YearnTogether</title>
+
+    <!-- SEO Meta -->
+    <meta name="title" content="YearnTogether | The world's first ever gaming-enabled IDO" />
+    <meta
+      name="description"
+      content="Revolutionize fundraising with our decentralized platform powered by web3. Join a global community for a gaming-style, community-driven process that's transparent, rewarding, and like nothing you've experienced before."
+    />
+    <meta
+      name="keywords"
+      content="YearnTogether, Yearn Together, participate2yearn, promote2yearn, perform2yearn, predict2yearn, pool2yearn, #participate2yearn, #promote2yearn, #perform2yearn, #predict2yearn, #pool2yearn, draw, pool, Elite Pass"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:url" content="https://stake.yearntogether.com/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="YearnTogether | The world's first ever gaming-enabled IDO" />
+    <meta property="og:image" content="https://stake.yearntogether.com/assets/images/yearn-together-og.png" />
+    <meta property="og:description"
+      content="Revolutionize fundraising with our decentralized platform powered by web3. Join a global community for a gaming-style, community-driven process that's transparent, rewarding, and like nothing you've experienced before."
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://stake.yearntogether.com/" />
+    <meta property="twitter:title" content="YearnTogether | The world's first ever gaming-enabled IDO" />
+    <meta property="twitter:description"
+      content="Revolutionize fundraising with our decentralized platform powered by web3. Join a global community for a gaming-style, community-driven process that's transparent, rewarding, and like nothing you've experienced before."
+    />
+    <meta property="twitter:image" content="https://stake.yearntogether.com/assets/images/yearn-together-og.png" />
+
+    <!-- Site Verification -->
+    <meta name="google-site-verification" content="sIgzDh2qMATFNNS1CT8yXLQYUf_Z5mrT2HBXGNHejeQ" />
+
+    <!-- Favicons -->
+    <!-- Favicon -->
+    <link rel="icon" type="image/x-icon" href="https://yearntogether.com/assets/icons/favicon.ico" />
+    <link rel="shortcut icon" href="https://yearntogether.com/assets/icons/favicon.ico" />
+
+
+    <!-- Manifest for PWA -->
+    
+
+    <!-- Styles -->
+    <link rel="stylesheet" href="/assets/css/bundle.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.css"
+    />
+
+    <!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-60QBW842X3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-60QBW842X3');
+    </script>
   </head>
   <body>
     <div id="root"></div>
